--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-DB_USER="henry2022b"
-DB_PASSWORD="Henry2022b"
-DB_HOST="190.228.29.62"
-DB_NAME="clickcare2"
+DB_USER="ticketup"
+DB_PASSWORD="gS0q4_t[4^}g"
+DB_HOST="72.167.58.62"
+DB_NAME="ticketup"
 DB_PORT="3306"
-TOKENKEY="dnFhBi8QHUiA9IFYu9mbVb6nogLrsY"
+TOKENKEY=""
 URL_MAIL="http://localhost:3001"
 HOST_EMAIL="smtp.gmail.com"
 PORT_EMAIL="465"
