--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "backend para ticketup",
   "main": "index.js",
   "scripts": {
+    "build": "echo ' Building...(not actualy doing something, but usually I would)'",
+    "start": "node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
